--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "framer-motion": "^12.23.24",
     "lenis": "^1.3.15",
     "lucide-react": "^0.555.0",
-    "next": "16.0.5",
+    "next": "^16.1.1",
     "next-themes": "^0.4.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
